apps/inventree/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: eehub-inventree
