apps/inventree/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventree-web
  namespace: inventory
  labels:
    app.kubernetes.io/name: inventree-web
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: eehub-inventree
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - secretName: inventory-eehub-mingz-top-tls
      hosts:
        - inventory.eehub.mingz.top
  rules:
    - host: inventory.eehub.mingz.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventree-proxy
                port:
                  number: 8080
